# stickerkit

./: .dockerignore  .env.template  .gitignore  AGENT.md  AR_EXPORT_GUIDE.md  DEPLOYMENT.md  Dockerfile  Makefile  README-Docker.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
custom_nodes/: .gitkeep  README.md  __init__.py  ar_sticker_generator.py
custom_nodes/ar_sticker_factory/: __init__.py
custom_nodes/ar_sticker_factory/nodes/: ar_sticker_generator.py  sam2_segmenter.py  usdz_exporter.py
custom_nodes/ar_sticker_factory/utils/: image_processing.py  usdz_creation.py
k8s/: README.md  configmap.yaml  deployment.yaml  hpa.yaml  kustomization.yaml  monitoring.yaml  namespace.yaml  network-policy.yaml  nvidia-device-plugin.yaml  pvc.yaml  resource-quota.yaml  service.yaml
k8s-simple/: deployment.yaml  service.yaml
scripts/: benchmark_demo.py  debug-workflow.sh  download-models.sh  setup-dev.sh  start-comfyui.sh  test-setup.sh
specs/: dependency_analysis.md  project_checklist.md  project_overview.md  technical_architecture.md
workflows/: DEMO_README.md  README.md  ar_sticker_test.json  demo_ar_sticker_workflow.json
workflows/examples/: ar_sticker_export_test.json  basic_flux.json  complete_ar_sticker_pipeline.json  controlnet_workflow.json  test_sticker_basic.json  upscale_workflow.json
